force-app/main/default/objects/Beneficiario__c/Beneficiario__c.object-meta.xml
<CustomObject>
    <description>Objeto que recebe as informações do aplicativo vidas beneficiários.</description>
    <label>Beneficiario</label>
    <nameField>
        <label>Nome Completo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>