force-app/main/default/objects/Beneficiario__c/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Registra o bairro do beneficiário.</description>
    <label>Bairro</label>
    <length>60</length>
    <type>Text</type>
</CustomField>