force-app/main/default/objects/Beneficiario__c/fields/Cep__c.field-meta.xml
<CustomField>
    <fullName>Cep__c</fullName>
    <description>Recebe o valor do CEP informado no aplicativo beneficiários.</description>
    <label>Cep</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>