force-app/main/default/objects/Beneficiario__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <description>Cidade informada no cadastro do aplicativo beneficiários.</description>
    <label>Cidade</label>
    <length>60</length>
    <type>Text</type>
</CustomField>