force-app/main/default/objects/Beneficiario__c/fields/Codigo_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Contrato__c</fullName>
    <description>Código do contrato para o qual o beneficiário está sendo cadastro. campo utilizado na geração do TXT, não sendo obrigatorio na criação, porem é obrigatório para gerar um TXT.</description>
    <label>Código de Contrato</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>