force-app/main/default/objects/Beneficiario__c/fields/Codigo_de_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Empresa__c</fullName>
    <description>Código da Empresa para a qual o beneficiário está sendo incluído. Não é obrigatório na criação do registro, porem para gerar o TXT de carga é obrigatório.</description>
    <label>Código de Empresa</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>