force-app/main/default/objects/Beneficiario__c/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <description>Complemento do endereço informado</description>
    <inlineHelpText>Complemento do endereço informado.</inlineHelpText>
    <label>Complemento</label>
    <length>150</length>
    <type>Text</type>
</CustomField>