force-app/main/default/objects/Beneficiario__c/fields/Cpf__c.field-meta.xml
<CustomField>
    <fullName>Cpf__c</fullName>
    <description>CPF informado no cadastro do beneficiário.</description>
    <inlineHelpText>Informe um CPF aqui.</inlineHelpText>
    <label>Cpf</label>
    <length>11</length>
    <type>Text</type>
</CustomField>