force-app/main/default/objects/Beneficiario__c/fields/Data_da_Expedicao_RG__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Expedicao_RG__c</fullName>
    <description>data da expedição do RG.</description>
    <label>Data da Expedição RG</label>
    <type>Date</type>
</CustomField>