force-app/main/default/objects/Beneficiario__c/fields/Data_de_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Nascimento__c</fullName>
    <description>Recebe a data de nascimento do beneficiário que está sendo cadastrado.</description>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>