force-app/main/default/objects/Beneficiario__c/fields/Dependencia__c.field-meta.xml
<CustomField>
    <fullName>Dependencia__c</fullName>
    <description>Informa se é o beneficiário é titular ou dependente.</description>
    <label>Dependência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titular</fullName>
            </value>
            <value>
                <fullName>Dependente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>