force-app/main/default/objects/Beneficiario__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email de contato utilizado para enviar documentação.</description>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>