force-app/main/default/objects/Beneficiario__c/fields/Estado_civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_civil__c</fullName>
    <description>Estado civil do beneficiário que está sendo incluído.</description>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solteiro</fullName>
                <default>true</default>
                <label>Solteiro</label>
            </value>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Viúvo</fullName>
            </value>
            <value>
                <fullName>Divorciado</fullName>
            </value>
            <value>
                <fullName>Desquitado</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>