force-app/main/default/objects/Beneficiario__c/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>Idade__c</fullName>
    <description>Idade do beneficiário que está sendo incluído.</description>
    <label>Idade</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>