force-app/main/default/objects/Beneficiario__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <description>Logradouro do beneficiário que está sendo incluído.</description>
    <label>Logradouro</label>
    <length>150</length>
    <type>Text</type>
</CustomField>