force-app/main/default/objects/Beneficiario__c/fields/Nome_da_Mae__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Mae__c</fullName>
    <description>Registra o nome da mãe do beneficiário.</description>
    <label>Nome da Mãe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>