force-app/main/default/objects/Beneficiario__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Numero do endereço do beneficiário que está sendo incluído.</description>
    <label>Numero</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>