force-app/main/default/objects/Beneficiario__c/fields/Opportunidade__c.field-meta.xml
<CustomField>
    <fullName>Opportunidade__c</fullName>
    <description>Informa a qual oportunidade o registro pertence.</description>
    <label>Opportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Beneficiarios</relationshipLabel>
    <relationshipName>Beneficiarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>