force-app/main/default/objects/Beneficiario__c/fields/Orgao_Expedidor_Rg__c.field-meta.xml
<CustomField>
    <fullName>Orgao_Expedidor_Rg__c</fullName>
    <description>Informa qual órgão expedidor do Rg.</description>
    <label>Orgão Expedidor Rg</label>
    <length>10</length>
    <type>Text</type>
</CustomField>