force-app/main/default/objects/Beneficiario__c/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <description>Informa qual o parentesco do beneficiário com o titular. Se o valor selecionado for titular ele é o titular.</description>
    <label>Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titular</fullName>
            </value>
            <value>
                <fullName>Esposo (a)</fullName>
            </value>
            <value>
                <fullName>Filho (a)</fullName>
            </value>
            <value>
                <fullName>Pai (mãe)</fullName>
            </value>
            <value>
                <fullName>Depend. Sob Guarda</fullName>
            </value>
            <value>
                <fullName>Companheiro (a)</fullName>
            </value>
            <value>
                <fullName>Menor Tutelado</fullName>
            </value>
            <value>
                <fullName>Enteado (a)</fullName>
            </value>
            <value>
                <fullName>Filho (a) Adotivo (a)</fullName>
            </value>
            <value>
                <fullName>Irmão (â)</fullName>
            </value>
            <value>
                <fullName>Sobrinho (a)</fullName>
            </value>
            <value>
                <fullName>Neto (a)</fullName>
            </value>
            <value>
                <fullName>Tio (a)</fullName>
            </value>
            <value>
                <fullName>Avô (ó)</fullName>
            </value>
            <value>
                <fullName>Sogro (a)</fullName>
            </value>
            <value>
                <fullName>Genro (nora)</fullName>
            </value>
            <value>
                <fullName>Bisavô (ó)</fullName>
            </value>
            <value>
                <fullName>Bisneto (a)</fullName>
            </value>
            <value>
                <fullName>Homo-afetiva</fullName>
            </value>
            <value>
                <fullName>Cunhado(a)</fullName>
            </value>
            <value>
                <fullName>Filho(a) Inválido(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>