force-app/main/default/objects/Beneficiario__c/fields/Plano__c.field-meta.xml
<CustomField>
    <fullName>Plano__c</fullName>
    <description>Plano escolhido pelo beneficiário.</description>
    <label>Plano</label>
    <length>6</length>
    <type>Text</type>
</CustomField>