force-app/main/default/objects/Beneficiario__c/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <description>Telefone do beneficiário informado no cadastro.</description>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>