force-app/main/default/objects/Beneficiario__c/fields/Titular__c.field-meta.xml
<CustomField>
    <fullName>Titular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Informa quem é o titular do registro, caso esteja vazio o beneficiário é o titular..</description>
    <label>Titular</label>
    <referenceTo>Beneficiario__c</referenceTo>
    <relationshipLabel>Dependentes</relationshipLabel>
    <relationshipName>Titular</relationshipName>
    <type>Lookup</type>
</CustomField>