force-app/main/default/objects/Beneficiario__c/fields/Uf__c.field-meta.xml
<CustomField>
    <fullName>Uf__c</fullName>
    <description>Informa a sigla do estado o qual o beneficiário reside.</description>
    <label>Uf</label>
    <length>2</length>
    <type>Text</type>
</CustomField>