force-app/main/default/objects/Beneficiario__c/fields/Uf_Rg__c.field-meta.xml
<CustomField>
    <fullName>Uf_Rg__c</fullName>
    <description>Informa qual o Rg do beneficiário.</description>
    <label>Uf Rg</label>
    <length>2</length>
    <type>Text</type>
</CustomField>