force-app/main/default/objects/Beneficiario__c/fields/Valor_Plano__c.field-meta.xml
<CustomField>
    <fullName>Valor_Plano__c</fullName>
    <description>informa qual o valor do plano do usuário.</description>
    <inlineHelpText>Informa qual o valor do plano, verifique idade e valor para certificar que o valor está correto.</inlineHelpText>
    <label>Valor Plano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>