force-app/main/default/objects/Beneficiario__c/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <description>Informa a data que o beneficiário desejá ser incluído.</description>
    <label>Vigência</label>
    <type>Date</type>
</CustomField>